# openglBoilerplate

./: CMakeLists.txt
.cache/clangd/index/: EBO.cpp.F480A20DAFE8A1BC.idx  EBO.h.3FBB60C2736D0D08.idx  Texture.cpp.E7BB0763F5E7F40B.idx  Texture.h.53996F26F0DCA5B0.idx  VAO.cpp.B06795851F731D8B.idx  VAO.h.ED44DB28444DE087.idx  VBO.cpp.EF2FA28FED730E2D.idx  VBO.h.3BA9D38A8029587F.idx  glad.c.4FC6D0B0836ADF3A.idx  glad.h.6DB6576819A74B5A.idx  glfw3.h.F3B0D4137D1B5EA3.idx  khrplatform.h.0A1B01DE3860A867.idx  main.cpp.F3A0D7519887CB86.idx  shaderClass.cpp.ECAD2840B06D8F11.idx  shaderClass.h.E1B189012A09B32D.idx  stb_image.cpp.4D5697E3E693459F.idx  stb_image.h.C75070CD008B3BEE.idx
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: EBO.cpp  Texture.cpp  VAO.cpp  VBO.cpp  main.cpp  shaderClass.cpp
src/headers/: EBO.h  Texture.h  VAO.h  VBO.h  shaderClass.h
src/shaders/: default.frag  default.vert
